# bangle

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: angle.rs  degrees.rs  lib.rs  percentage.rs  radians.rs  rotations.rs  unit.rs  value.rs
tests/: angle_tests.rs  degree_tests.rs  math_tests.rs  percentage_tests.rs  radian_tests.rs  rotation_tests.rs
